--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,9 @@
-<ion-tabs>
+<!-- <ion-tabs *ngIf="finish1 == ture and finish2 == ture"> -->
+<ion-tabs >
   <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="About" tabIcon="information-circle"></ion-tab>
+  <ion-tab [root]="tab4Root" tabTitle="Members" tabIcon="people"></ion-tab>
+  <ion-tab [root]="tab5Root" tabTitle="Entries" tabIcon="cart"></ion-tab>
+  <ion-tab [root]="tab2Root" tabTitle="About" tabIcon="information-circle" ></ion-tab>
   <ion-tab [root]="tab3Root" tabTitle="Contact" tabIcon="contacts"></ion-tab>
+  
 </ion-tabs>
