--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,21 +5,22 @@
 </ion-header>
 
 <ion-content padding>
+
   <ion-card>
     <ion-card-header>
-      Bar Chart
+      Creditors:
     </ion-card-header>
     <ion-card-content>
-      <canvas #barCanvas></canvas>
+      <canvas #creditorsCanvas></canvas>
     </ion-card-content>
   </ion-card>
 
   <ion-card>
     <ion-card-header>
-      Doughnut Chart
+      Debtors:
     </ion-card-header>
     <ion-card-content>
-      <canvas #doughnutCanvas></canvas>
+      <canvas #debtorsCanvas></canvas>
     </ion-card-content>
   </ion-card>
 
