--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -3,7 +3,8 @@
   <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
   <ion-tab [root]="tab4Root" tabTitle="Members" tabIcon="people"></ion-tab>
   <ion-tab [root]="tab5Root" tabTitle="Entries" tabIcon="cart"></ion-tab>
+  <ion-tab [root]="tab6Root" tabTitle="Settings" tabIcon="settings"></ion-tab>
   <ion-tab [root]="tab2Root" tabTitle="About" tabIcon="information-circle" ></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Contact" tabIcon="contacts"></ion-tab>
+  
   
 </ion-tabs>
