--- a/src/pages/entriesMng/entries/entries.html
+++ b/src/pages/entriesMng/entries/entries.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Entries</ion-title>
+    <ion-title> {{'ENTRIES.TITLE' | translate}} </ion-title>
   </ion-navbar>
   
 </ion-header>
@@ -15,18 +15,7 @@
 
 <ion-content padding>
         <ion-card ion-item *ngFor="let item of entries" (click)="showEntry(item)" >
-<!--     
-          <ion-row>
-            <ion-col>
-            <ion-item>
-              <h2>{{item.name}}</h2> <h1>{{item.amount}}</h1>     
-              <p>{{item.date}}</p>
-            </ion-item>
-            </ion-col>
-            <ion-col>
-                <span >{{item.creditor.name}}</span>
-            </ion-col>
-          </ion-row> -->
+
 
           <ion-row>
             <ion-col>
@@ -58,7 +47,10 @@
           </ion-card>
           
           <ion-fab right bottom>
-              <button (click)="newEntry()" [disabled]="gdata.sheet.password == ''" ion-fab style="margin-right:20px; margin-bottom :20px" color="positive" ><ion-icon name="add"></ion-icon></button>
+              <button (click)="newEntry()" [disabled]="gdata.sheet.password == ''" ion-fab  color="secondary" ><ion-icon name="add"></ion-icon></button>
             </ion-fab>
 
 </ion-content>
+
+
+<!-- style="margin-right:20px; margin-bottom :20px" -->
