--- a/src/pages/membersMng/memberbalance/memberbalance.html
+++ b/src/pages/membersMng/memberbalance/memberbalance.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>{{member.name}} balance</ion-title>
+    <ion-title> {{'MEMBER_BALANCE.TITLE' |translate }}</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -15,43 +15,73 @@
 
 <ion-content padding>
 
-    <ion-grid *ngIf="report">
-        <ion-row>
-            <ion-col >
-                <p style="text-align: start">Member Name</p>
-            </ion-col>
-            <ion-col>
-                <p>Balance</p>
-            </ion-col>
-        </ion-row>
-        <ion-row>
-            <ion-col>
-                <h1>{{member.name}}</h1>
-            </ion-col>
-            <ion-col>
-                <h2 [ngClass]="report.balanceCss">{{report.balance}}</h2>
-            </ion-col>
-        </ion-row>
-    </ion-grid>
+  <ion-grid *ngIf="report">
+    <ion-row>
+      <ion-col>
+        <p style="text-align: start"> {{'MEMBER_BALANCE.NAME' |translate}}</p>
+      </ion-col>
+      <ion-col>
+        <p> {{'MEMBER_BALANCE.BALANCE' |translate}}</p>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <h1>{{member.name}}</h1>
+      </ion-col>
+      <ion-col>
+        <h2 [ngClass]="report.balanceCss">{{report.balance}}</h2>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
+  <ion-list *ngIf="report" >
+      <ion-item>
+        <ion-row *ngFor="let item of report.shares" (click)="entryDetails(item)">
+          <ion-col col-8 >
+            <div>
+               {{ item.entryName }}
+            </div>
+          </ion-col>
+          <ion-col col-3>
+            <div>
+              <span [ngClass]='item.Css'> {{item.amount}} </span>
+            </div>
+          </ion-col>
+          <ion-col col-1>
+            <ion-icon [name]="item.Icon" style="zoom:1.5" icon-end></ion-icon>
+          </ion-col>
+        </ion-row>  
+      </ion-item>
+    </ion-list>
 
 
-  <ion-list *ngIf="report">
-    <ion-item >
-      <ion-row *ngFor="let item of report.shares" (click)="entryDetails(item)" >
-        <ion-col col-8>
-        <div> <span class='innerEntryName'>  {{ item.entryName }}</span> </div>
-        </ion-col>
-        <ion-col>
-          <div> 
-            <span [ngClass]='item.Css'> {{item.amount}} </span>
-           <ion-icon [name]="item.Icon" icon-end ></ion-icon>
+
+  <!-- <ion-list *ngIf="report" fixed>
+    <ion-item>
+      <ion-row *ngFor="let item of report.shares" (click)="entryDetails(item)">
+        <ion-col col-8 style="width:70%">
+          <div>
+            <span class='innerEntryName'> {{ item.entryName }}</span>
           </div>
         </ion-col>
-        
+        <ion-col style="width:30%">
+          <div>
+            <span [ngClass]='item.Css'> {{item.amount}} </span>
+          </div>
+        </ion-col>
+        <ion-col>
+          <div>
+          <ion-icon [name]="item.Icon" icon-end></ion-icon>
+          </div>
+        </ion-col>
       </ion-row>
 
+
     </ion-item>
-  </ion-list>
+  </ion-list> -->
+
+
+
 
 
 
